--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,8 @@
+/* stylelint-disable declaration-colon-space-after */
+/* stylelint-disable no-descending-specificity */
+/* stylelint-disable color-hex-case */
+/* stylelint-disable indentation */
+/* stylelint-disable no-missing-end-of-source-newline */
 body {
     background-color: white;
 }
