--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -45,6 +45,10 @@ button, .addNewBook {
     flex-direction: row;
 }
 
+.book h2 {
+    margin-right: 50px;
+}
+
 .remove_button {
     height: 50px;
     margin-bottom: auto;
