--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,20 +24,53 @@ button,
     font-weight: 700;
 }
 
+.blue {
+    color: blue;
+}
+
 .container {
     width: 669px;
     margin-left: auto;
     margin-right: auto;
 }
 
-.container h1 {
+.container nav {
+    display: flex;
+    border: 2px black inset;
+}
+
+.container nav h2 {
+    width: 60%;
+    padding-left: 15px;
+}
+
+.options {
+    list-style-type: none;
+    margin: 0;
+    display: flex;
+    padding: 0;
+    text-align: center;
+    gap: 20px;
+}
+
+.border-right {
+    border-right: 2px black inset;
+}
+
+.options li {
+    float: flex;
+    padding-top: 23px;
+    padding-right: 10px;
+}
+
+.container .main-section h1 {
     padding: 10px;
     text-align: center;
 }
 
-.container #books-list {
+.container .main-section #books-list {
     border-style: inset;
-    border-width: 0.7px;
+    border-width: 2px;
     border-color: black;
 }
 
@@ -63,12 +96,12 @@ button,
     margin-top: 50px;
 }
 
-.indicator {
-    margin: 20px auto;
-    background-color: black;
-    border-radius: 24px;
-    width: 120px;
-    height: 4px;
+section h2 {
+    text-align: center;
+}
+
+.hidden {
+    display: none;
 }
 
 #book-form {
