--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -31,7 +31,6 @@ button,
 }
 
 .container {
-    width: 669px;
     height: 100%;
     margin-left: auto;
     margin-right: auto;
@@ -97,6 +96,9 @@ button,
 .books-crud {
     text-align: center;
     margin-top: 50px;
+    width: 679px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 section h2 {
@@ -118,6 +120,12 @@ section h2 {
     border-style: inset;
     border-width: 0.7px;
     border-color: black;
+}
+
+.about-view {
+    width: 679px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 #book-form .addNewBook {
